panama-src/genai/ffi/genai/ort_genai_c_h.java


    /**
     * {@snippet lang=c :
     * const char *OgaResultGetError(const OgaResult *result)
     * }
     */
    public static MemorySegment OgaResultGetError(MemorySegment result) {
        var mh$ = OgaResultGetError.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaResultGetError", result);
            }
            return (MemorySegment)mh$.invokeExact(result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaSetLogBool {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaSetLogBool");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaSetLogBool(const char *name, bool value)
     * }
     */
    public static FunctionDescriptor OgaSetLogBool$descriptor() {
        return OgaSetLogBool.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaSetLogBool(const char *name, bool value)
     * }
     */
    public static MethodHandle OgaSetLogBool$handle() {
        return OgaSetLogBool.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaSetLogBool(const char *name, bool value)
     * }
     */
    public static MemorySegment OgaSetLogBool$address() {
        return OgaSetLogBool.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaSetLogBool(const char *name, bool value)
     * }
     */
    public static MemorySegment OgaSetLogBool(MemorySegment name, boolean value) {
        var mh$ = OgaSetLogBool.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaSetLogBool", name, value);
            }
            return (MemorySegment)mh$.invokeExact(name, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaSetLogString {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaSetLogString");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaSetLogString(const char *name, const char *value)
     * }
     */
    public static FunctionDescriptor OgaSetLogString$descriptor() {
        return OgaSetLogString.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaSetLogString(const char *name, const char *value)
     * }
     */
    public static MethodHandle OgaSetLogString$handle() {
        return OgaSetLogString.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaSetLogString(const char *name, const char *value)
     * }
     */
    public static MemorySegment OgaSetLogString$address() {
        return OgaSetLogString.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaSetLogString(const char *name, const char *value)
     * }
     */
    public static MemorySegment OgaSetLogString(MemorySegment name, MemorySegment value) {
        var mh$ = OgaSetLogString.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaSetLogString", name, value);
            }
            return (MemorySegment)mh$.invokeExact(name, value);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaSetLogCallback {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaSetLogCallback");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaSetLogCallback(void (*callback)(const char *, size_t))
     * }
     */
    public static FunctionDescriptor OgaSetLogCallback$descriptor() {
        return OgaSetLogCallback.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaSetLogCallback(void (*callback)(const char *, size_t))
     * }
     */
    public static MethodHandle OgaSetLogCallback$handle() {
        return OgaSetLogCallback.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaSetLogCallback(void (*callback)(const char *, size_t))
     * }
     */
    public static MemorySegment OgaSetLogCallback$address() {
        return OgaSetLogCallback.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaSetLogCallback(void (*callback)(const char *, size_t))
     * }
     */
    public static MemorySegment OgaSetLogCallback(MemorySegment callback) {
        var mh$ = OgaSetLogCallback.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaSetLogCallback", callback);
            }
            return (MemorySegment)mh$.invokeExact(callback);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroyResult {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroyResult");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroyResult(OgaResult *result)
     * }
     */
    public static FunctionDescriptor OgaDestroyResult$descriptor() {
        return OgaDestroyResult.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroyResult(OgaResult *result)
     * }
     */
    public static MethodHandle OgaDestroyResult$handle() {
        return OgaDestroyResult.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroyResult(OgaResult *result)
     * }
     */
    public static MemorySegment OgaDestroyResult$address() {
        return OgaDestroyResult.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroyResult(OgaResult *result)
     * }
     */
    public static void OgaDestroyResult(MemorySegment result) {
        var mh$ = OgaDestroyResult.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroyResult", result);
            }
            mh$.invokeExact(result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroyString {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroyString");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroyString(const char *)
     * }
     */
    public static FunctionDescriptor OgaDestroyString$descriptor() {
        return OgaDestroyString.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroyString(const char *)
     * }
     */
    public static MethodHandle OgaDestroyString$handle() {
        return OgaDestroyString.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroyString(const char *)
     * }
     */
    public static MemorySegment OgaDestroyString$address() {
        return OgaDestroyString.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroyString(const char *)
     * }
     */
    public static void OgaDestroyString(MemorySegment x0) {
        var mh$ = OgaDestroyString.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroyString", x0);
            }
            mh$.invokeExact(x0);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroyNamedTensors {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroyNamedTensors");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroyNamedTensors(OgaNamedTensors *)
     * }
     */
    public static FunctionDescriptor OgaDestroyNamedTensors$descriptor() {
        return OgaDestroyNamedTensors.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroyNamedTensors(OgaNamedTensors *)
     * }
     */
    public static MethodHandle OgaDestroyNamedTensors$handle() {
        return OgaDestroyNamedTensors.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroyNamedTensors(OgaNamedTensors *)
     * }
     */
    public static MemorySegment OgaDestroyNamedTensors$address() {
        return OgaDestroyNamedTensors.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroyNamedTensors(OgaNamedTensors *)
     * }
     */
    public static void OgaDestroyNamedTensors(MemorySegment x0) {
        var mh$ = OgaDestroyNamedTensors.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroyNamedTensors", x0);
            }
            mh$.invokeExact(x0);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaCreateSequences {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaCreateSequences");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateSequences(OgaSequences **out)
     * }
     */
    public static FunctionDescriptor OgaCreateSequences$descriptor() {
        return OgaCreateSequences.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateSequences(OgaSequences **out)
     * }
     */
    public static MethodHandle OgaCreateSequences$handle() {
        return OgaCreateSequences.HANDLE;
    }
